<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_inst"
    android:gravity="center"
    android:paddingStart="24dp"
    android:paddingTop="10dp"
    android:paddingEnd="24dp"
    android:paddingBottom="10dp"
    tools:context=".BookingCardEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/select_customer_name"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/customer_name_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_product_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/product_required"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/product_required_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:padding="10dp" />


            <TextView
                android:id="@+id/tv_booking_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/booking_date"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_booking_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/dd_mm_yyyy"
                android:padding="12dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_booking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/booking_time"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_booking_time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/_00_00"
                android:padding="12dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/service_type"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/service_type"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_assigned_service_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/assigned_service_center"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/assigned_service_center_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:padding="10dp" />


            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_inst"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>