<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_inst"
    android:gravity="center"
    android:paddingStart="24dp"
    android:paddingTop="10dp"
    android:paddingEnd="24dp"
    android:paddingBottom="10dp"
    tools:context=".InventoryCardEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:padding="8dp"
                    android:text="@string/item_picture"
                    android:textColor="@color/login_form_details"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_pick_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/placeholder"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp" />


            </LinearLayout>


            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/item_name"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/tyre"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/item_name"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/brand"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/description"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="Description..."
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/quantity"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/quantity"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/vendor"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/vendor"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <TextView
                android:id="@+id/tv_item_bar_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/item_bar_code"
                android:textColor="@color/login_form_details"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_item_bar_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et_inst"
                android:hint="@string/bar_code"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_inst"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>