<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/style_signup"
    android:foreground="?selectableItemBackground"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_gradient">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/product_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/product_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_name_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX" />


            </TableRow>

            <TableRow
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/man_hours_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/man_hours"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/man_hours_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX"/>


            </TableRow>

            <TableRow
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/complexity_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/complexity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/complexity_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX"/>


            </TableRow>

            <TableRow
                android:id="@+id/row4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/service_charge_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/service_charge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/service_charge_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX"/>


            </TableRow>

            <TableRow
                android:id="@+id/row5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX" />


            </TableRow>

            <TableRow
                android:id="@+id/row6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/service_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:text="@string/service_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/service_date_result_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="XXXX" />


            </TableRow>

        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table"
            android:padding="1dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/bg_card_edit_gradient"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/edit_iv"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_car_repair_five" />

                <ImageView
                    android:id="@+id/delete_iv"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/edit_iv"
                    android:src="@drawable/ic_car_delete" />


            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
